manifests/cic-ussd/ussd-tasker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cic-user-tasker
  labels:
    app: cic-user-tasker
spec:
  selector:
    matchLabels:
      app: cic-user-tasker
  replicas: 1
  template:
    metadata:
      labels:
        app: cic-user-tasker
        group: cic-stack
    spec:
      containers:
        - name: cic-user-tasker
          image: docker.grassecon.net/cic-stack/cic-ussd:0.5.55
          imagePullPolicy: Always
          command: ["/root/start_cic_user_tasker.sh", "-q", "cic-ussd", "-vv"]
          volumeMounts:
            - mountPath: /keys
              readOnly: true
              name: pgp
      volumes:
        - name: pgp
          secret:
            secretName: pgp-keys
      restartPolicy: Always
