manifests/cic-ussd/user-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cic-user-server-svc
spec:
  selector:
    app: cic-user-server
  type: ClusterIP
  ports:
    - name: server
      protocol: TCP
      port: 80
      targetPort: 9500
