manifests/cic-ussd/ussd-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cic-user-ussd-svc
spec:
  selector:
    app: cic-user-ussd-server
  type: ClusterIP
  ports:
    - name: server
      protocol: TCP
      port: 80
      targetPort: 9000
