manifests/cic-ussd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ussd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ussd.grassecon.org`)
      kind: Rule
      services:
        - name: cic-user-ussd-svc
          port: server
  tls:
    secretName: ussd.grassecon.org.cert
